frontend/src/styles/individual/right-panel.css
/* frontend/src/styles/individual/right-panel.css */

/* search bar */
#search-container {
    position: relative;
    width: 100%;
}

#search-input {
    width: 100%;
    padding: 5px 10px 5px 30px; /* extra left padding for icon */
    box-sizing: border-box;
    border-radius: 8px;
    border: 1px solid transparent; /* hide border */
    background-color: var(--medium-blue);
    color: var(--light-blue);
    height: 45px;
    font-size: 15px;
}

.search-icon {
    position: absolute;
    left: 8px;
    top: 50%;
    transform: translateY(-50%);
    color: var(--light-blue);
    pointer-events: none;
}

/* hover behaviours */
#search-container:hover #search-input {
    border: 1px solid var(--grey-blue);
}

#search-container:hover .search-icon {
    color: var(--lightest-blue);
}

/* focused behaviours */
#search-container:focus-within #search-input {
    background-color: var(--dark-blue);
    border: 1px solid var(--accent);
    outline: none;
}

#search-container:focus-within .search-icon {
    color: var(--accent);
}

/* suggested users */
#suggested-container {
    display: flex;
    flex-direction: column;
    border-radius: 8px;
    border: 1px solid var(--debug-suggested);
    margin-top: 20px;
}

#suggested-header {
    text-align: center;
}

.suggested-user {
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    font-size: 15px;
}

.icon-username {
    display: flex;
    gap: 5px;
    align-items: center;
}

